forEnersys/DavePkg/objects/SBQQ__Quote__c.object
<CustomObject>
    <fields>
        <fullName>Print_Names__c</fullName>
        <formula>NOT(Print_Descriptions__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Print Names</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Print_Notes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Print Notes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Print_Service_Options__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Print Service Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Print_Ship_To_Only__c</fullName>
        <formula>IF(Print_End_User_Info__c, FALSE, TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Print Ship To Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Print_Signature_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Print Signature Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Print_Terms_and_Conditions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Print Terms and Conditions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Approval_Count__c</fullName>
        <description>the number of line items awaiting Product Approval</description>
        <label>Product Approval Count</label>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Approval_Code__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Product_Approval_Reqd_Count__c</fullName>
        <label>Product Approval Reqd Count</label>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Approval_Required_For_Rollup__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Product_Approval_Status__c</fullName>
        <formula>CASE(TEXT(SBQQ__Status__c), &quot;Approved&quot;, &quot;Quote Approved&quot;,
IF(SBQQ__LineItemCount__c = 0,&quot;No Action Required&quot;, IF( Product_Approvals_Remaining__c &gt; 0, IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;Hold&quot;) &amp; &quot; &quot; &amp; TEXT(Product_Approvals_Remaining__c) &amp; &quot; Product(s) must be approved before this quote can be submitted for pricing approval&quot;, IMAGE(&quot;/img/msg_icons/confirm16.png&quot;, &quot;Ready to Submit&quot;) &amp; &quot; Ready to Submit for Pricing Approval&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This status display information about the products that have been selected for this quotation.  Some may be in need of approval from engineering or other sources.</inlineHelpText>
        <label>Product Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Approvals_Remaining__c</fullName>
        <formula>Product_Approval_Reqd_Count__c - Product_Approval_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Approvals Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Detail__c</fullName>
        <label>Product Detail</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Name</fullName>
                </value>
                <value>
                    <fullName>Description</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Protected_Account__c</fullName>
        <formula>SBQQ__Account__r.Protective_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Protected Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ready_to_Submit_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready to Submit for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_Discount__c</fullName>
        <label>Reason for Discount</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reference_Information_Number__c</fullName>
        <label>Reference Information Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rental_Rate__c</fullName>
        <defaultValue>0.04</defaultValue>
        <description>this value is multiplied by the List price of the product to determine the monthly rental rate</description>
        <inlineHelpText>% used against the List Price to calculate the Monthly Rental Price.  Anything less than 4% is subject to approval.</inlineHelpText>
        <label>Rental Rate %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Requested_Delivery_Date__c</fullName>
        <label>Requested Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requirements__c</fullName>
        <inlineHelpText>Include a summary of key requirements related to quoting</inlineHelpText>
        <label>Requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SAP_Quote_Number__c</fullName>
        <label>SAP Quote Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Sync_Last_Datetime__c</fullName>
        <label>SAP Sync Last Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SAP_Sync_Last_Message__c</fullName>
        <label>SAP Sync Last Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SAP_Sync_Last_Result__c</fullName>
        <label>SAP Sync Last Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBU__c</fullName>
        <description>EnerSys Business Unit</description>
        <label>SBU</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBU</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Area_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Area Data</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND ((2 AND 3) OR (4 AND 5) OR (6 AND 7))</booleanFilter>
            <filterItems>
                <field>Sales_Area_data__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.SBQQ__Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.SBU__c</field>
                <operation>equals</operation>
                <value>MP - EMEA</value>
            </filterItems>
            <filterItems>
                <field>Sales_Area_data__c.Division_Code__c</field>
                <operation>equals</operation>
                <value>01</value>
            </filterItems>
            <filterItems>
                <field>$Source.SBU__c</field>
                <operation>equals</operation>
                <value>RP - EMEA</value>
            </filterItems>
            <filterItems>
                <field>Sales_Area_data__c.Division_Code__c</field>
                <operation>equals</operation>
                <value>02</value>
            </filterItems>
            <filterItems>
                <field>$Source.SBU__c</field>
                <operation>equals</operation>
                <value>EAS - EMEA</value>
            </filterItems>
            <filterItems>
                <field>Sales_Area_data__c.Division_Code__c</field>
                <operation>equals</operation>
                <value>03</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Sales_Area_data__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Office__c</fullName>
        <formula>Sales_Area_Data__r.Sales_Office_lookup__r.Code__c</formula>
        <label>Sales Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Organization__c</fullName>
        <formula>Sales_Area_Data__r.Sales_Area_Sales_Organisation_Code__r.Sales_Organization__c</formula>
        <label>Sales Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Select_Shipping_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select Shipping Address (lookup to Account)</description>
        <label>Select Shipping Address</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes (Select Shipping Address)</relationshipLabel>
        <relationshipName>Quotes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_To_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To Data</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Ship_To_Data__c.Sales_Area_Data__c</field>
                <operation>equals</operation>
                <valueField>$Source.Sales_Area_Data__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Ship_To_Data__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_To_Phone__c</fullName>
        <label>Ship To Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Shipping_Conditions__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Conditions</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SAP_Reference__c.Code_Type__c</field>
                <operation>equals</operation>
                <value>Shipping Condition - SC</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SAP_Reference__c</referenceTo>
        <relationshipLabel>Quotes (Shipping Conditions)</relationshipLabel>
        <relationshipName>Quotes3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping_Terms__c</fullName>
        <label>Shipping Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Site_Options__c</fullName>
        <description>Site Options</description>
        <label>Site Options</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBU__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Site_Options</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Industry__c</fullName>
        <description>Sub-Industry will be dependent pick list of Industry</description>
        <label>Sub-Industry</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Sub_Industry</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Systems__c</fullName>
        <label>Systems</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Rate__c</fullName>
        <label>Tax Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <description>Technology</description>
        <label>Technology</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBU__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Technology</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Today__c</fullName>
        <formula>Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Monthly_Rental_Cost__c</fullName>
        <label>Total Monthly Rental Cost</label>
        <summarizedField>SBQQ__QuoteLine__c.Monthly_Rental_Rate__c</summarizedField>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type_Cover__c</fullName>
        <label>Type\Cover</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_From__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_To__c</fullName>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VehicleNotes__c</fullName>
        <label>Vehicle Notes</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volt_Term__c</fullName>
        <label>Volt / Term.</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_EMEA_Quotes</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__Status__c</columns>
        <columns>SBQQ__Account__c</columns>
        <columns>SBQQ__Opportunity2__c</columns>
        <columns>Opp_End_User__c</columns>
        <columns>SBQQ__CustomerAmount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>All EMEA Quotes</label>
    </listViews>
    <listViews>
        <fullName>My_Accepted_Quotes</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__Account__c</columns>
        <columns>SBQQ__Opportunity2__c</columns>
        <columns>Opp_End_User__c</columns>
        <columns>SBQQ__CustomerAmount__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>SBQQ__Status__c</field>
            <operation>equals</operation>
            <value>Accepted</value>
        </filters>
        <label>My Accepted Quotes</label>
    </listViews>
    <listViews>
        <fullName>My_Approved_Quotes</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>SBQQ__Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>My Approved Quotes</label>
    </listViews>
    <listViews>
        <fullName>My_Draft_Quotes</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__Status__c</columns>
        <columns>SBQQ__Account__c</columns>
        <columns>SBQQ__Opportunity2__c</columns>
        <columns>Opp_End_User__c</columns>
        <columns>SBQQ__CustomerAmount__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>SBQQ__Status__c</field>
            <operation>equals</operation>
            <value>Draft,In Review</value>
        </filters>
        <label>My Draft Quotes</label>
    </listViews>
    <listViews>
        <fullName>My_Quotes</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__Status__c</columns>
        <columns>SBQQ__Account__c</columns>
        <columns>SBQQ__Opportunity2__c</columns>
        <columns>Opp_End_User__c</columns>
        <columns>SBQQ__CustomerAmount__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Quotes</label>
    </listViews>
    <listViews>
        <fullName>My_Quotes_to_Revise</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__Account__c</columns>
        <columns>SBQQ__Opportunity2__c</columns>
        <columns>Opp_End_User__c</columns>
        <columns>SBQQ__CustomerAmount__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>SBQQ__Status__c</field>
            <operation>equals</operation>
            <value>Denied</value>
        </filters>
        <label>My Quotes to Revise</label>
    </listViews>
    <recordTypes>
        <fullName>Rental_Quote_Approved</fullName>
        <active>true</active>
        <description>A rental quote that has been pricing approved</description>
        <label>Rental Quote - Approved</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rental_Quote_Draft</fullName>
        <active>true</active>
        <description>A rental quote that has not been approved yet</description>
        <label>Rental Quote - Draft</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Quote_Approved</fullName>
        <active>true</active>
        <description>A sales quote that has been pricing approved</description>
        <label>Sales Quote - Approved</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Quote_Draft</fullName>
        <active>true</active>
        <description>A sales quote that has not been approved yet</description>
        <label>Sales Quote - Draft</label>
    </recordTypes>
    <validationRules>
        <fullName>Tax_Rate_and_Est_Amount</fullName>
        <active>true</active>
        <description>enforces a tax rate be entered if an estimated amount is entered as this shows up on a quote if the amount is entered.</description>
        <errorConditionFormula>AND(Estimated_Tax_Amount__c &gt; 0,  ISBLANK(Tax_Rate__c))</errorConditionFormula>
        <errorDisplayField>Tax_Rate__c</errorDisplayField>
        <errorMessage>Must enter tax rate along with estimated tax.</errorMessage>
    </validationRules>
</CustomObject>